--- a/src/index.njk
+++ b/src/index.njk
@@ -25,68 +25,55 @@
 		}
 
 
+
+
     </script>
 </head>
 <body>
 <main>
 
-    <picture class="profile-picture" aria-hidden="true">
-        <source srcset="/images/avatar@1.avif 1x, /images/avatar@2.avif 2x, /images/avatar@3.avif 3x" type="image/avif">
-        <source srcset="/images/avatar@1.webp 1x, /images/avatar@2.webp 2x, /images/avatar@3.webp 3x" type="image/webp">
-        <img alt="Profile picture"
-             srcset="/images/avatar@1.jpg 1x, /images/avatar@2.jpg 2x, /images/avatar@3.jpg 3x"
-             width="225"
-             height="231">
-    </picture>
-    <h1>{{ config.name }} <span class="line-dash">—</span> <small>{{ config.jobTitle }}</small></h1>
+    <div class="front">
+        {# <picture class="profile-picture" aria-hidden="true"> #}
+        {# <source srcset="/images/avatar@1.avif 1x, /images/avatar@2.avif 2x, /images/avatar@3.avif 3x" type="image/avif"> #}
+        {# <source srcset="/images/avatar@1.webp 1x, /images/avatar@2.webp 2x, /images/avatar@3.webp 3x" type="image/webp"> #}
+        {# <img alt="Profile picture" #}
+        {# srcset="/images/avatar@1.jpg 1x, /images/avatar@2.jpg 2x, /images/avatar@3.jpg 3x" #}
+        {# width="225" #}
+        {# height="231"> #}
+        {# </picture> #}
+
+        <h1>{{ config.name }} <span class="line-dash">—</span> <small>{{ config.jobTitle }}</small></h1>
+    </div>
+    <div class="back">
+        <a href="/Alex%20Kozack.vcf">vcard</a>
+
+        <h2 id="list-skills-header">My skills</h2>
+        <ol id="list-skills" aria-labelledby="list-skills-header">
+            {% for skill in config.skills %}
+                <li>{{ skill }}</li>
+            {% endfor %}
+        </ol>
 
 
-    <!--	<section>-->
-    <!--		<h2 id="list-skills-header">My skills:</h2>-->
-    <!--		<ul aria-labelledby="list-skills-header">-->
-    <!--			{% for skill in skills %}-->
-    <!--			<li class="{{ link.type }}">-->
-    <!--				{{ skill }}-->
-    <!--			</li>-->
+        <h2 id="list-contacts-header">My contacts</h2>
+        <ul id="list-contacts" aria-labelledby="list-contacts-header">
+            {% for item in config.contacts %}
+                <li class="{{ item.type }}">
+                    <a href="{{ item.url }}" title="{{ item.label }}">
+                        {# <picture> #}
+                        {# #}{# {% for source in link.image.sources %} #}
+                        {# #}{# <source type="{{ source.type }}" srcset="{{ source.srcset }}"> #}
+                        {# #}{# {% endfor %} #}
+                        {# <img aria-hidden="true" alt="{{ item.label }}" srcset="{{ item.picture.srcset }}"> #}
+                        {# </picture> #}
 
-    <!--			{% endfor %}-->
-    <!--		</ul>-->
-    <!--	</section>-->
+                        <span>{{ item.label }}</span>
+                    </a>
+                </li>
+            {% endfor %}
 
-
-    <h2 id="list-contacts-header">My contacts</h2>
-    <ul aria-labelledby="list-contacts-header">
-        {% for item in config.contacts %}
-            <li class="{{ item.type }}">
-                <a href="{{ item.url }}" title="{{ item.label }}">
-                    <picture>
-                        {# {% for source in link.image.sources %} #}
-                        {# <source type="{{ source.type }}" srcset="{{ source.srcset }}"> #}
-                        {# {% endfor %} #}
-                        <img aria-hidden="true" alt="{{ item.label }}" srcset="{{ item.picture.srcset }}">
-                    </picture>
-
-                    <span>{{ item.label }}</span>
-                </a>
-            </li>
-        {% endfor %}
-
-        <li>
-            @
-        </li>
-
-    </ul>
-
-
-    <!--	<p>-->
-    <!--		Social:-->
-    <!--	<ul>-->
-    <!--		<li>Habr</li>-->
-    <!--		<li>GitHub</li>-->
-    <!--		<li>Telegram</li>-->
-    <!--		<li>Facebook</li>-->
-    <!--	</ul>-->
-    <!--	</p>-->
+        </ul>
+    </div>
 </main>
 </body>
 </html>
