--- a/src/styles.css
+++ b/src/styles.css
@@ -8,69 +8,133 @@ body, html {
 body {
     display: flex;
     margin: 0;
-    padding: 4rem 0;
+    padding: 0;
     justify-content: center;
     align-items: center;
     font-family: Arial, serif;
+    background: #fefefe;
 }
 
 main {
-    --avatar-size: 15rem;
-    width: 100%;
-    min-height: 30rem;
-    margin-top: calc(var(--avatar-size) / 2);
-    box-shadow: 0 8px 60px -10px rgba(13, 28, 39, 0.6);
+    /*height: 50vh;*/
+    /*width: 90vw;*/
+    position: relative;
+    /*--avatar-size: 10rem;*/
+    /* width: 100%; */
+    /* min-height: 30rem; */
+    /* margin-top: calc(var(--avatar-size) / 2); */
+    /*box-shadow: 0 8px 60px -10px rgba(13, 28, 39, 0.6);*/
     background: #fff;
-    border-radius: 1rem;
-    max-width: 40rem;
-    position: relative;
-    text-align: center;
+    /*border-radius: 1rem;*/
+    /*max-width: 45rem;*/
+    /*position: relative;*/
+    /* text-align: center; */
+    /*display: grid;*/
+    /*grid-template-columns: 1fr 1fr;*/
+    /*gap: 1rem;*/
+    /*padding: 2rem 2rem 2rem 7rem;*/
+    /*box-sizing: border-box;*/
+    perspective: 1000px;
+
 }
 
-h1 {
-    flex-direction: column;
-    display: flex;
+main:focus-within .front, main:hover .front, main.flip .front {
+    transform: rotateY(180deg);
 }
 
-h1, h2 {
-    font-weight: 400;
+main:focus-within .back, main:hover .back, main.flip .back {
+    transform: rotateY(0deg);
 }
 
-.profile-picture img {
-    width: var(--avatar-size);
-    height: auto;
-    border-radius: 50%;
-    margin-top: calc(-1 * var(--avatar-size)  / 2);
-}
-
-.line-dash {
-    line-height: 1rem;
-    opacity: 0.3;
-}
-
-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-ul a {
-    display: block;
-    position: relative;
-}
-ul span {
+.front {
     position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 0;
+    z-index: 1;
 }
 
+.back {
+    transform: rotateY(-180deg);
+}
 
-li img {
-    width: 5rem;
-    height: auto;
+.front, .back {
+    width: 100%;
+    height: 100%;
+    outline: 1px solid;
+    /*box-sizing: border-box;*/
+    transition: all 0.3s ease-in;
+    /*color: white;*/
+    background-color: #fff;
+    /*padding: 10px;*/
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
-li.GitHub img {
-    width: 15rem;
-}
+
+/*h1 {*/
+/*    grid-column-end: 3;*/
+/*    grid-column-start: 1;*/
+/*}*/
+
+/*h1, h2 {*/
+/*    font-weight: 400;*/
+/*    margin: 0;*/
+/*}*/
+
+/*#list-skills-header {*/
+/*    grid-column-start: 1;*/
+/*    grid-column-end: 2;*/
+/*}*/
+
+/*#list-skills {*/
+/*    grid-column-start: 1;*/
+/*    grid-column-end: 2;*/
+/*}*/
+
+/*#list-skills li {*/
+/*    display: inline;*/
+/*}*/
+
+/*#list-contacts-header {*/
+/*    grid-column-start: 2;*/
+/*    grid-row-start: 2;*/
+/*}*/
+
+/*.profile-picture {*/
+/*    position: absolute;*/
+/*}*/
+/*.profile-picture img {*/
+/*    width: var(--avatar-size);*/
+/*    height: auto;*/
+/*    border-radius: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*}*/
+
+/*.line-dash {*/
+/*    line-height: 1rem;*/
+/*    opacity: 0.3;*/
+/*}*/
+
+/*ul, ol {*/
+/*    list-style: none;*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*}*/
+/*ul a {*/
+/*    display: block;*/
+/*    position: relative;*/
+/*}*/
+/*!*ul span {*!*/
+/*!*    position: absolute;*!*/
+/*!*    top: 0;*!*/
+/*!*    left: 0;*!*/
+/*!*    bottom: 0;*!*/
+/*!*    right: 0;*!*/
+/*!*    opacity: 0;*!*/
+/*!*}*!*/
+
+
+/*!*li img {*!*/
+/*!*    width: 5rem;*!*/
+/*!*    height: auto;*!*/
+/*!*}*!*/
+/*!*li.GitHub img {*!*/
+/*!*    width: 15rem;*!*/
+/*!*}*!*/
