--- a/src/index.njk
+++ b/src/index.njk
@@ -27,12 +27,13 @@
 
 
 
+
     </script>
 </head>
 <body>
-<main>
+<main class="flip">
 
-    <div class="front">
+    <div class="front card">
         {# <picture class="profile-picture" aria-hidden="true"> #}
         {# <source srcset="/images/avatar@1.avif 1x, /images/avatar@2.avif 2x, /images/avatar@3.avif 3x" type="image/avif"> #}
         {# <source srcset="/images/avatar@1.webp 1x, /images/avatar@2.webp 2x, /images/avatar@3.webp 3x" type="image/webp"> #}
@@ -44,8 +45,15 @@
 
         <h1>{{ config.name }} <span class="line-dash">—</span> <small>{{ config.jobTitle }}</small></h1>
     </div>
-    <div class="back">
-        <a href="/Alex%20Kozack.vcf">vcard</a>
+    <div class="back card">
+        <div class="add-contact-container">
+            <a href="/Alex%20Kozack.vcf" title="Add contact">
+                <svg viewBox="0 0 24 24" fill="black" width="18px" height="18px" aria-hidden="true">
+                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                    <path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V8c0-.55-.45-1-1-1s-1 .45-1 1v2H2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1H6zm9 4c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"/>
+                </svg>
+            </a>
+        </div>
 
         <h2 id="list-skills-header">My skills</h2>
         <ol id="list-skills" aria-labelledby="list-skills-header">
@@ -60,13 +68,7 @@
             {% for item in config.contacts %}
                 <li class="{{ item.type }}">
                     <a href="{{ item.url }}" title="{{ item.label }}">
-                        {# <picture> #}
-                        {# #}{# {% for source in link.image.sources %} #}
-                        {# #}{# <source type="{{ source.type }}" srcset="{{ source.srcset }}"> #}
-                        {# #}{# {% endfor %} #}
-                        {# <img aria-hidden="true" alt="{{ item.label }}" srcset="{{ item.picture.srcset }}"> #}
-                        {# </picture> #}
-
+                        {{ item.icon | safe }}
                         <span>{{ item.label }}</span>
                     </a>
                 </li>
