Мета-теги для поисковых ботов

--- a/src/includes/vcard.njk
+++ b/src/includes/vcard.njk
@@ -1,6 +1,6 @@
 BEGIN:VCARD
 VERSION:3.0
-N:Kozack;Alex;;;
+N:{{ config.name.last }};{{ config.name.first }};;;
 FN:{{ config.name }}
 ORG:ihappymama.ru
 TITLE:{{ config.jobTitle }}
