--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,7 @@
 layout: page.njk
 ---
 <div class="wrapper">
-    <main>
+    <main class="flip">
         <section class="front card" onclick="this.parentElement.classList.add('flip')">
             <h1>{{ config.name }}<br><span class="line-dash">—</span><br><small>{{ config.jobTitle }}</small></h1>
         </section>
