--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,169 +1,6 @@
-* {
-    box-sizing: border-box;
-}
-
-body, html {
-    height: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    font-size: 15px;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-    background: #eee;
-}
-
-.wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    min-height: 100%;
-    padding: 45px 5px;
-}
-
-main {
-    position: relative;
-    perspective: 1000px;
-    width: 100%;
-    max-width: 20rem;
-}
-
-main:focus-within .front, main:hover .front, main.flip .front {
-    transform: rotateY(180deg);
-}
-
-main:focus-within .back, main:hover .back, main.flip .back {
-    transform: rotateY(0deg);
-}
-
-.front {
-    position: absolute;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.back {
-    transform: rotateY(-180deg);
-    display: flex;
-    gap: 2rem;
-    flex-direction: column;
-}
-
-
-.front, .back {
-    width: 100%;
-    height: 100%;
-    transition: transform 0.3s ease-in;
-    transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.card {
-    padding: 2rem;
-    background-color: #fff;
-    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-    border-radius: 4px;
-}
-
-.back section {
-    flex-grow: 1;
-}
-
-.back section.add-contact-container {
-    flex-grow: unset;
-    display: flex;
-    justify-content: space-between;
-}
-
-.add-contact-container a {
-    display: flex;
-    width: 4rem;
-    height: 4rem;
-    border-radius: 50%;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    border: 1px solid #ddd;
-}
-
-.add-contact-container a:focus, .add-contact-container a:hover {
-    background-color: #ddd;
-}
-
-.add-contact-container a svg {
-    width: 100%;
-    height: 100%;
-}
-
-.back section.add-contact-container img {
-    width: 100px;
-    height: 100px;
-    margin: -1.5rem;
-}
-
-
-
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-ul li a {
-    padding: 0.6rem 0;
-    border-bottom: 1px solid #ddd;
-    color: #010101;
-    margin-top: -1px;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    font-size: 120%;
-}
-
-ul li a:focus, ul li a:hover {
-    background-color: #ddd;
-}
-
-ul li a svg {
-    margin-right: 1rem;
-}
-
-h1 {
-    font-weight: 100;
-}
-
-h2 {
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-    margin-top: 1.5rem;
-}
-
-h2:first-child {
-    margin-top: 0;
-}
-
-
-
-@media (min-width: 570px) {
-    .wrapper {
-        align-items: center;
-    }
-    main {
-        max-width: 38rem;
-    }
-
-    .back {
-        flex-direction: row;
-    }
-
-    .add-contact-container {
-        flex-direction: column;
-    }
-}
+@import "box-sizing.css";
+@import "page.css";
+@import "card.css";
+@import "add-to-contact-section.css";
+@import "lists.css";
+@import "headers.css";
