--- a/src/index.njk
+++ b/src/index.njk
@@ -2,14 +2,14 @@
 layout: page.njk
 ---
 <div class="wrapper">
-    <main class="flip">
+    <main>
         <section class="front card" onclick="this.parentElement.classList.add('flip')">
             <h1>{{ config.name }}<br><span class="line-dash">—</span><br><small>{{ config.jobTitle }}</small></h1>
         </section>
         <div class="back card">
             <section class="add-contact-container">
                 <a href="/Alex%20Kozack.vcf" title="Add contact">
-                    <svg viewBox="0 0 24 24" fill="black" width="18px" height="18px" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" fill="black" width="18" height="18" aria-hidden="true">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V8c0-.55-.45-1-1-1s-1 .45-1 1v2H2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1H6zm9 4c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"/>
                     </svg>
@@ -20,7 +20,7 @@ layout: page.njk
                 {% endset %}
                 {% set qrcode = vcard | qrcode %}
                 <a href="{{ qrcode }}" target="_blank" title="Open qrcode in full size">
-                    <img src="{{ qrcode }}" alt="Contact QRCode" width="120px">
+                    <img src="{{ qrcode }}" alt="Contact QRCode" width="120" height="120">
                 </a>
             </section>
 
