--- a/src/styles/lists.css
+++ b/src/styles/lists.css
@@ -7,7 +7,7 @@ ul {
 ul a {
     padding: 0.6rem 0;
     border-bottom: 1px solid #ddd;
-    color: #010101;
+    color: var(--black);
     margin-top: -1px;
     text-decoration: none;
     display: flex;
