--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,14 +1,20 @@
 html,
 body {
+    --white: rgb(254,254,254);
+    --black: rgb(1,1,1);
+    color: var(--black);
     height: 100%;
     width: 100%;
     box-sizing: border-box;
     font-size: 15px;
     background: #eee;
-}
-
-body {
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        filter: invert();
+    }
 }
