--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -32,8 +32,8 @@
     <meta property="twitter:image" content="{{ config.site }}/images/avatar-origin.png">
 
 
-    <link rel="shortcut icon" href="/images/avatar@1.jpg" type="image/jpeg">
-    <link rel="apple-touch-icon" href="/images/avatar@1.jpg" type="image/jpeg">
+    <link rel="shortcut icon" href="/images/avatar-face-32.jpg" type="image/jpeg">
+    <link rel="apple-touch-icon" href="/images/avatar-180.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/styles/styles.css">
     <script type="application/ld+json">{% renderJS config %}{% include 'schema.11ty.js' %}{% endrenderJS %}</script>
 </head>
