--- a/src/index.njk
+++ b/src/index.njk
@@ -9,8 +9,7 @@ layout: page.njk
         <div class="back card">
             <section class="add-contact-container">
                 <a href="/Alex%20Kozack.vcf" title="Add contact">
-                    <svg viewBox="0 0 24 24" fill="black" width="18" height="18" aria-hidden="true">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
+                    <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
                         <path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V8c0-.55-.45-1-1-1s-1 .45-1 1v2H2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1H6zm9 4c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"/>
                     </svg>
                 </a>
