--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -35,7 +35,7 @@
     <link rel="shortcut icon" href="/images/avatar-face-32.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="/images/avatar-180.jpg" type="image/jpeg">
     <link rel="stylesheet" href="/styles/styles.css">
-    <script type="application/ld+json">{% renderJS config %}{% include 'schema.11ty.js' %}{% endrenderJS %}</script>
+    <script type="application/ld+json">{% schema config %}</script>
 </head>
 <body>
 {{ content | safe }}
