--- a/src/styles/add-to-contact-section.css
+++ b/src/styles/add-to-contact-section.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
 }
 
-@media (min-width: 570px) {
+@media (orientation: landscape) {
     .add-contact-container {
         flex-direction: column;
     }
