--- a/src/styles/headers.css
+++ b/src/styles/headers.css
@@ -1,6 +1,12 @@
 h1 {
     font-weight: 100;
 }
+@media (orientation: portrait) {
+    h1  {
+        display: flex;
+        flex-direction: column;
+    }
+}
 @media (prefers-color-scheme: dark) {
     h1 {
         font-weight: 400;
