--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ lang }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +8,27 @@
     <link rel="canonical" href="{{ config.site }}"/>
 
     <!-- Primary Meta Tags -->
-    <title>{{ config.name }} — {{ config.jobTitle }} — Personal site</title>
-    <meta name="title" content="{{ config.name }} — {{ config.jobTitle }}">
-    <meta name="description" content="Personal site">
+    <title>{% _t 'site-title-with-description', lang %}</title>
+    <meta name="title" content="{% _t 'site-title', lang %}">
+    <meta name="description" content="{% _t 'site-description', lang %}">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="profile">
-    <meta property="profile:first_name" content="{{ config.name.first }}">
-    <meta property="profile:last_name" content="{{ config.name.last }}">
-    <meta property="profile:username" content="{{ config.name }}">
+    <meta property="profile:first_name" content="{% _t 'first-name', lang %}">
+    <meta property="profile:last_name" content="{% _t 'last-name', lang %}">
+    <meta property="profile:username" content="{% _t 'name', lang %}">
     <meta property="profile:gender" content="male">
-    <meta property="og:title" content="{{ config.name }} — {{ config.jobTitle }}">
+    <meta property="og:title" content="{% _t 'site-title', lang %}">
     <meta property="og:url" content="{{ config.site }}">
-    <meta property="og:description" content="Personal site">
+    <meta property="og:description" content="{% _t 'site-description', lang %}">
     <meta property="og:image" content="{{ config.site }}/images/avatar-origin.png">
-    <meta property="og:locale" content="en_US">
+    <meta property="og:locale" content="{{ lang }}">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="{{ config.site }}">
-    <meta property="twitter:title" content="{{ config.name }} — {{ config.jobTitle }}">
-    <meta property="twitter:description" content="Personal site">
+    <meta property="twitter:title" content="{% _t 'site-title', lang %}">
+    <meta property="twitter:description" content="{% _t 'site-description', lang %}">
     <meta property="twitter:image" content="{{ config.site }}/images/avatar-origin.png">
 
 
