--- a/src/layouts/card.njk
+++ b/src/layouts/card.njk
@@ -8,16 +8,16 @@ layout: base.njk
         </section>
         <div class="back card">
             <section class="add-contact-container">
-                <a href="/Alex%20Kozack.vcf" title="{% _t 'add-contact', lang %}" class="vcard">
+                <a href="/{{ lang }}/kozack.vcf" title="{% _t 'add-contact', lang %}" class="vcard">
                     <svg viewBox="0 0 24 24" aria-hidden="true">
                         <path d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V8c0-.55-.45-1-1-1s-1 .45-1 1v2H2c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1v-2h2c.55 0 1-.45 1-1s-.45-1-1-1H6zm9 4c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"/>
                     </svg>
                 </a>
 
                 {% set vcard %}
-                    {% include "src/includes/vcard.njk" %}
+                    {% include "src/layouts/vcard.njk" %}
                 {% endset %}
-                {% set qrcode = vcard | qrcode %}
+                {% set qrcode = vcard | qrcode('/images/qrcode-' + lang + '.png') %}
                 <a href="{{ qrcode.url }}" target="_blank" title="{% _t 'qrcode', lang, 'title' %}">
                     <img src="{{ qrcode.dataurl }}" alt="{% _t 'qrcode', lang, 'alt' %}">
                 </a>
