--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -10,6 +10,15 @@ permalink: sitemap.xml
     <url>
         <loc>{{ config.site }}/</loc>
         <changefreq>daily</changefreq>
+        <xhtml:link
+                rel="alternate"
+                hreflang="ru"
+                href="{{ config.site }}/ru/"/>
+        <xhtml:link
+                rel="alternate"
+                hreflang="en"
+                href="{{ config.site }}/"/>
+
     </url>
 
 
