--- a/src/layouts/card.njk
+++ b/src/layouts/card.njk
@@ -2,7 +2,7 @@
 layout: base.njk
 ---
 <div class="wrapper">
-    <main class="flip">
+    <main>
         <section class="front card" onclick="this.parentElement.classList.add('flip')">
             <h1>{% _t 'name', lang %} <span>—</span> <small>{% _t 'job', lang %}</small></h1>
         </section>
