Добавлена украинская версия

--- a/src/layouts/base.njk
+++ b/src/layouts/base.njk
@@ -9,6 +9,7 @@
     <link rel="alternate" href="{{ config.site }}/" hreflang="en"/>
     <link rel="alternate" href="{{ config.site }}/" hreflang="x-default"/>
     <link rel="alternate" href="{{ config.site }}/ru/" hreflang="ru"/>
+    <link rel="alternate" href="{{ config.site }}/uk/" hreflang="uk"/>
 
     <!-- Primary Meta Tags -->
     <title>{% _t 'site-title-with-description', lang %}</title>
