--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -12,12 +12,16 @@ permalink: sitemap.xml
         <changefreq>daily</changefreq>
         <xhtml:link
                 rel="alternate"
+                hreflang="en"
+                href="{{ config.site }}/"/>
+        <xhtml:link
+                rel="alternate"
                 hreflang="ru"
                 href="{{ config.site }}/ru/"/>
         <xhtml:link
                 rel="alternate"
-                hreflang="en"
-                href="{{ config.site }}/"/>
+                hreflang="uk"
+                href="{{ config.site }}/uk/"/>
 
     </url>
 
