Русская и Украинская версии
* Русская версия главной страницы

* Русская версия vcard

* Мета теги для мультиязычной страницы

* Добавлена украинская версия

* Исправлены размеры карточки для длинного текста

* Добавлены правила для перенаправления по языку

--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -10,6 +10,19 @@ permalink: sitemap.xml
     <url>
         <loc>{{ config.site }}/</loc>
         <changefreq>daily</changefreq>
+        <xhtml:link
+                rel="alternate"
+                hreflang="en"
+                href="{{ config.site }}/"/>
+        <xhtml:link
+                rel="alternate"
+                hreflang="ru"
+                href="{{ config.site }}/ru/"/>
+        <xhtml:link
+                rel="alternate"
+                hreflang="uk"
+                href="{{ config.site }}/uk/"/>
+
     </url>
 
 
